Container-Header overlap fix
Added media query to add extra padding at top for screens less than
598px

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,3 +8,10 @@
     overflow: auto;
     padding-bottom: 25px; 
 }
+
+@media screen and
+(max-width: 598px){
+    .container{
+        padding-top: 78px;
+    }
+}
